--- a/style.css
+++ b/style.css
@@ -263,3 +263,44 @@ span{
     color: #fff;
     transform: all ease 0.3s;
 }
+
+.about{
+    display: flex;
+    width: 85%;
+    margin: 50px auto;
+    justify-content: space-around;
+    align-items: center;
+    padding: 30px;
+}
+
+.aboutbox{
+    width: 40%;
+    font-family: myraid pro;
+}
+
+.aboutbox img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.aboutbox h1{
+    color: #333333;
+    font-weight: 700;
+    font-size: 3rem;
+    margin: 0px;
+}
+
+.aboutbox h4{
+    color: #333333;
+    font-weight: 400;
+    font-size: 2rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.aboutbox p{
+    font-size: 1rem;
+    color: #bdbdbd;
+    letter-spacing: 0.5px;
+}
